api/src/routes/snapshots/nightlio_api__routes__goals__tests__goal-update-404-not-found.snap
---
source: src/routes/goals.rs
expression: "json!({ \"status\": expected_status, \"body\": actual })"
---
{
  "body": {
    "error": "No changes or goal not found"
  },
  "status": 404
}
