api/src/routes/snapshots/nightlio_api__routes__goals__tests__goals-create-201.snap
---
source: src/routes/goals.rs
expression: "json!({ \"status\": expected_status, \"body\": actual })"
---
{
  "body": {
    "id": 1
  },
  "status": 201
}
