api/src/routes/snapshots/nightlio_api__routes__goals__tests__goals-create-400-missing-title.snap
---
source: src/routes/goals.rs
expression: "json!({ \"status\": expected_status, \"body\": actual })"
---
{
  "body": {
    "error": "Title is required"
  },
  "status": 400
}
