api/src/routes/snapshots/nightlio_api__routes__goals__tests__goals-list-empty.snap
---
source: src/routes/goals.rs
expression: "json!({ \"status\": expected_status, \"body\": actual })"
---
{
  "body": [],
  "status": 200
}
