api/src/routes/snapshots/nightlio_api__routes__goals__tests__goals-list-seeded.snap
---
source: src/routes/goals.rs
expression: "json!({ \"status\": expected_status, \"body\": actual })"
---
{
  "body": [
    {
      "already_completed_today": false,
      "completed": 0,
      "created_at": "<TS>",
      "description": "10 minutes",
      "frequency_per_week": 3,
      "id": 1,
      "last_completed_date": null,
      "period_start": "<DATE>",
      "streak": 0,
      "title": "Meditate",
      "updated_at": "<TS>",
      "user_id": 1
    },
    {
      "already_completed_today": false,
      "completed": 0,
      "created_at": "<TS>",
      "description": "",
      "frequency_per_week": 2,
      "id": 2,
      "last_completed_date": null,
      "period_start": "<DATE>",
      "streak": 0,
      "title": "Read",
      "updated_at": "<TS>",
      "user_id": 1
    }
  ],
  "status": 200
}
