api/src/routes/snapshots/nightlio_api__routes__goals__tests__routing-completions-options-204.snap
---
source: src/routes/goals.rs
expression: "json!({ \"status\": expected_status, \"body\": actual })"
---
{
  "body": null,
  "status": 204
}
