api/src/routes/snapshots/nightlio_api__routes__goals__tests__routing-goals-trailing-slash-404.snap
---
source: src/routes/goals.rs
expression: "json!({ \"status\": expected_status, \"body\": actual })"
---
{
  "body": {
    "error": "Resource not found"
  },
  "status": 404
}
